[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/entities/base_body/base_body.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/entities/enemy/enemy.gd" type="Script" id=2]
[ext_resource path="res://src/shaders/on_hit_shader.gdshader" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/hit = false
shader_param/mix_weight = 1.0

[node name="enemy" instance=ExtResource( 1 )]
collision_mask = 33
script = ExtResource( 2 )
BASE_ACCELERATION = 4000
steer_force = 1
look_ahead = 50
num_rays = 64

[node name="Sprite" parent="." index="2"]
material = SubResource( 1 )

[node name="detection_zone" type="Area2D" parent="." index="3"]
collision_layer = 4
collision_mask = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_zone" index="0"]

[node name="RayCast" parent="." index="4"]
enabled = true
collision_mask = 16
collide_with_areas = true

[node name="switch_direction_timer" type="Timer" parent="." index="5"]
wait_time = 2.0
autostart = true

[node name="base_attack_timer" type="Timer" parent="." index="8"]

[node name="Hurtbox" parent="." index="10"]
collision_layer = 128
collision_mask = 8

[connection signal="death" from="." to="." method="_on_enemy_death"]
[connection signal="body_entered" from="detection_zone" to="." method="_on_detection_zone_body_entered"]
[connection signal="timeout" from="switch_direction_timer" to="." method="_on_switch_direction_timer_timeout"]
